# kittymode

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  kittymode.spec  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml  tests.yml
data/: cat_noises.json  embeddings.npy  noise_index.json
models/onnx/: model.onnx
scripts/: build.py  build_prod.ps1  create_icon.py  export_onnx.py
src/kittymode/: __init__.py  __main__.py  capture_window.py  config.py  error_handler.py  generate_embeddings.py  generate_noises.py  keyboard_listener.py  logger.py  main.py  noise_selector.py  platform_utils.py  settings_window.py  similarity_search.py  startup_check.py  text_output.py  toggle.py  tray.py
tests/: __init__.py  conftest.py  test_capture_window.py  test_config.py  test_integration.py  test_keyboard.py  test_noise_selector.py  test_similarity.py
